--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -131,7 +131,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:hint="" />
+                android:hint="http:// 빼고 입력" />
         </TableRow>
 
     </TableLayout>
